# local-domain

./: .gitignore  .gitmodules  Cargo.toml  README.md  mix.exs
lib/: action.ex  local_domain.ex  rz_json.ex  secure_json.ex  zkvm.ex
lib/zkvm/: forwarder_calldata.ex  zkvm.ex
native/aarm/: Cargo.toml
native/aarm/src/: constants.rs  lib.rs
native/aarm_core/: Cargo.toml
native/aarm_core/src/: action_tree.rs  authorization.rs  compliance.rs  constants.rs  delta_proof.rs  encryption.rs  lib.rs  logic_instance.rs  merkle_path.rs  nullifier_key.rs  resource.rs  resource_logic.rs
native/hello-world/: Cargo.toml
native/hello-world/src/: lib.rs  main.rs
native/host/: Cargo.toml
native/host/src/: lib.rs
native/methods/guest/: Cargo.toml
native/methods/src/: lib.rs
native/rzjson/: Cargo.toml  README.md
native/rzjson/src/: lib.rs
native/testcrate/: Cargo.toml
native/testcrate/src/: main.rs
native/zkvm/: Cargo.toml  README.md
native/zkvm/src/: action.rs  foo.rs  lib.rs  logic_proof.rs  prover.rs  transaction.rs  utils.rs
native/zkvm_guest/host/: Cargo.toml
native/zkvm_guest/host/src/: main.rs
native/zkvm_guest/methods/guest/: Cargo.toml
native/zkvm_guest/methods/guest/src/: main.rs
test/: local_domain_test.exs
