[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"


[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.1.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
