[package]
name = "zkvm"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "zkvm"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
aarm_core = { path = "/Users/christophe/Documents/Work/aarm-risc0/aarm_core" }
lib = { path = "/Users/christophe/Documents/Code/rust/zkvm/zk-vm/root_project/native/lib" }
risc0-zkvm = { version = "2.0.2", features = ["prove", "std", "unstable"] }
serde = { version = "1.0.197", default-features = false }